Fix spacing css warnings

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ body {
     width: 33px;
     height: 33px;
     border-radius: 50%;
-    border: 3px solid var(--white);
+    border: 2px solid var(--white);
     > img {
       width: 100%;
       height: 100%;
